--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             <li>potato</li>
         </ul>
     </section>
+    <section id="payer-container">
+        <h2>Players Name</h2>
+        <ul>
+            <li>naymer</li>
+            <li>messi</li>
+            <li>kaka</li>
+            <li>pela</li>
+        </ul>
+    </section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, ipsam.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, tenetur?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, a!</p>
